--- a/mandatory/Makefile
+++ b/mandatory/Makefile
@@ -2,7 +2,7 @@ NAME = push_swap
 
 SRC = best_move.c ft_atoi.c ft_split.c if_sorted.c join.c lisub.c min_move.c pa.c \
 		parce.c part_stack.c pb.c ra.c rb.c rr.c rra.c rrb.c rrr.c sa.c sb.c smalle_stack.c \
-		ss.c stack.c push_swap.c
+		ss.c stack.c push_swap.c holdStacks.c
 INC = push_swap.h
 OBJS = ${SRC:.c=.o}
 CC = cc -Wall -Werror -Wextra
